--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,9 +105,9 @@
         </div>
         <div class="span2">
           <dl>
-            <dt><a href="">Visit Our Blog</a></dt>
+            <dt><a href="//seocahill.com">Visit Our Blog</a></dt>
             <dd>
-              <%= image_tag "twitter.png" %>
+              <a href="//twitter.com/showkhill"><%= image_tag "twitter.png" %></a>
               <%= image_tag "facebook.png" %>
               <%= image_tag "rss.png" %>
               <%= image_tag "vimeo.png" %>
