--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -100,7 +100,7 @@
 
 			<section id="new-promoters">
 				<header>
-					<h3 class="page-header"><i class="icon-globe"></i>Organizers near <%= @location %> <%= link_to "View All >>", promoter_profiles_path, class: "pull-right btn" %></h3>
+					<h3 class="page-header"><i class="icon-globe"></i>Organizers near <%= @location %> <%= link_to "View All >>", profiles_path, class: "pull-right btn" %></h3>
 				</header>
 				<div id="promoters-carousel" class="carousel slide" data-interval="false">
 					<div id="promoters" class="carousel-inner">
