fixed some stuff

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -192,9 +192,9 @@
 							<ul class="nav nav-list">
 			          <li class="nav-header">How it Works</li>
 			          <li class="divider"></li>
-			          <li><%= link_to "Organizing", info_path(anchor: "organizing") %></li>
-			          <li><%= link_to "Funding", info_path(anchor: "funding") %></li>
-			          <li><%= link_to "Touring", info_path(anchor: "touring") %></li>
+			          <li><%= link_to "Organizing", info_path(anchor: "organizer") %></li>
+			          <li><%= link_to "Artists", info_path(anchor: "artist") %></li>
+			          <li><%= link_to "Funding", info_path(anchor: "touring") %></li>
 			          <li><%= link_to "Supporting", info_path(anchor: "supporting") %></li>
 			          <li><%= link_to "Attending", info_path(anchor: "attending") %></li>
 			          <br>
