--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -51,7 +51,11 @@
           <!-- <img class="featurette-image pull-right img-circle" src="//placehold.it/200"> -->
           <%#= image_tag "cb-black.png", class: "featurette-image pull-right img-circle" %>
           <div class="page-header"><h1 class="featurette-heading" id="artist">The Artist. <span class="muted">Concentrate on Performing.</span></h1></div>
-          <p class="lead">When you sign up add a music or video playlist to your profile. After that you can browse the events index for a support slot, or organizer profiles if you're looking to tour their listed location. To register your interest just click the request button on the event/organizer profile page. The organizer will receive a private message with your media and contact email. <strong>PR/lobbying/experience is irrelevant.</strong> Music decides, there is no other consideration. So make recordings you like, get them out into the commons and then practice your performance.</p>
+          <p class="lead"><strong>PR, lobbying or industry experience is irrelevant on 100 Motels.</strong> Music decides, there is no other consideration. So make recordings you like, get them out into the commons and then practice your performance. </p>
+          <p class="lead">After you sign up add a music or video playlist to your profile. Look through local events for a support slot, or organizer profiles if you're looking to tour a particular location. To register your interest just click the request button on the event/organizer profile page. The organizer will receive a private message with your media and contact email. You can track and cancel all requests in your user account. </p>
+          <p class="lead">If you receive an offer to tour from an Organizer you need to agree a sales target to cover your costs, once that's done you can expect the Organizer to handle everything else. </p>
+
+
         </div>
 
         <!-- <hr class="featurette-divider"> -->
@@ -71,7 +75,7 @@
 
         <hr class="featurette-divider">
 
-        <div class="featurette" id="">
+        <div class="featurette" id="attending">
           <%#= image_tag "cb-black.png", class: "featurette-image pull-right img-circle" %>
           <h1 class="featurette-heading">Attending a Show. <span class="muted">Try music that's not from a tin.</span></h1>
           <p class="lead">Buying tickets on 100 Motels is a pain-free experience. </p>
@@ -79,12 +83,13 @@
             <li>There are no ads, promotions or hidden charges.</li><br>
              <li><strong>We never see your payment information</strong>, all credit card processing is handled directly by our payments provider, Stripe.</li><br>
              <li>You can save a user account at any time when making a purchase but it's not necessary. If you choose to create an account you can purchase tickets with a saved credit card (one mouse-click) and also track and cancel existing orders.</li><br>
-             <li>You don't have to print anything, the barcoded email receipt on your phone is your ticket. If the event is cancelled for some reason, you get a refund of the full ticket price.</li><br>
+             <li>You don't have to print anything, the barcoded email receipt on your phone is your ticket. </li><br>
+             <li>If the event is cancelled for some reason, you get a refund of the full ticket price.</li><br>
            </ul>
         </div>
 
         <hr class="featurette-divider">
-
+        <a href="#">Back to top</a>
         <!-- /END THE FEATURETTES -->
       <!-- </div> -->
     </div><!--/span-->
