--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -77,7 +77,7 @@
 
         <div class="featurette" id="attending">
           <%#= image_tag "cb-black.png", class: "featurette-image pull-right img-circle" %>
-          <h1 class="featurette-heading">Attending a Show. <span class="muted">Try music that's not from a tin.</span></h1>
+          <h1 class="featurette-heading">Attending. <span class="muted">The only rule is that no one gets ripped off.</span></h1>
           <p class="lead">Buying tickets on 100 Motels is a pain-free experience. </p>
           <ul class="lead">
             <li>There are no ads, promotions or hidden charges.</li><br>
