--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -8,14 +8,14 @@
           <li class="#"><a href="#">personal info</a></li>
           <li><a href="#">WIP</a></li>
           <li><a href="#">hiring</a></li>
-          <li><a href="#">github</a></li>
-          <li><a href="#">blog</a></li>
+          <li><a href="//github.com/seocahill">github</a></li>
+          <li><a href="//seocahill.com">blog</a></li>
           <li class="nav-header">About 100 Motels</li>
 
           <li><a href="#">Funding</a></li>
-          <li><a href="#">Revenue</a></li>
-          <li><a href="#">Promoter info</a></li>
-          <li><a href="#">Artist info</a></li>
+          <li><a href="#artist">Artists</a></li>
+          <li><a href="#organizer">Organizing a Show</a></li>
+          <li><a href="#attending">Supporting a Show</a></li>
 
           <li class="nav-header">Technical info</li>
           <li><a href="#">Development</a></li>
@@ -57,7 +57,7 @@
 
 
         </div>
-
+        <a href="#">Back to top</a>
         <!-- <hr class="featurette-divider"> -->
 
         <div class="featurette" id="organizer">
@@ -72,7 +72,7 @@
             </ul>
           </p>
         </div>
-
+        <a href="#">Back to top</a>
         <hr class="featurette-divider">
 
         <div class="featurette" id="attending">
