fixing a few things to integrate filepicker and mercury

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -91,7 +91,7 @@
 								<%= truncate @promoter.about, length: 250, separator: '.' || "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua." %>
 							</p>
-								<%= link_to "Full Profile", promoter_profile_path(@promoter), class: "btn btn-medium" %>
+								<%= link_to "Full Profile", profile_path(@promoter), class: "btn btn-medium" %>
 						</div>
 					</div>
 					<div class="row">
