--- a/app/views/promoter/events/_form.html.erb
+++ b/app/views/promoter/events/_form.html.erb
@@ -11,11 +11,11 @@
     <%= f.input :doors %>
     <%= f.input :ticket_price %>
     <%= f.input :target %>
-    <%= f.input :about %>
     <%= f.input :video %>
     <%= f.input :music %>
-    <%= f.label :image, "Upload Artist Images" %>
-    <%= f.filepicker_field :image, button_class: "btn btn-primary btn-medium"  %>
+    <%= f.input :image, label: "Upload Artist Images" do %>
+        <%= f.filepicker_field :image, button_class: "btn btn-primary btn-medium" %>
+    <% end %>
     <%= f.association :location, label_method: :city, include_blank: false, label: "Choose City" %>
     <%= f.input :new_location, label: "Or Enter Full Address", placeholder: "123 Cleveland Street, Dublin, Ireland" %>
 
