--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-			<div class="section-box">
+			<div class="section-box" id="opener">
 				<div class="navbar">
 					<h2 class="welcome-banner">
 					 Hi and Welcome to the 100 Motels Demo<br>
