fixing broken profile editor

--- a/app/views/promoter/profiles/_form.html.erb
+++ b/app/views/promoter/profiles/_form.html.erb
@@ -6,7 +6,7 @@
 
     <%= f.input :visible  %>
     <%= f.input :image, label: "Image or Logo" do %>
-      <%= f.filepicker_field :image, button_class: "btn btn-primary btn-block"  %>
+      <%= f.filepicker_field :image, button_class: "btn btn-primary btn-large"  %>
     <% end %>
     <%= f.input :promoter_media %>
 
