--- a/app/views/promoter/profiles/show.html.erb
+++ b/app/views/promoter/profiles/show.html.erb
@@ -3,6 +3,7 @@
     <div class="span12">
       <% if user_signed_in? && current_user.profile == @profile %>
         <%= link_to "Show Editor", "/editor" + request.path, id: "edit_link", class: "btn btn-large" %>
+        <%= link_to "Change Settings", edit_promoter_profile_path(@profile), class: "btn btn-large" %>
         <%= link_to "Public Profile", profile_path(@profile), class: "btn btn-large" %>
       <% elsif user_signed_in? && current_user.promoters.where("event_id IS NULL").include?(@profile.user) %>
         <button class="btn btn-success">Tour Requested <i class="icon-check icon-white"></i></button>
