--- a/app/views/promoter/events/_form.html.erb
+++ b/app/views/promoter/events/_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.input :artist %>
     <%= f.input :venue %>
     <%= f.association :location, label_method: :city, include_blank: false, label: "Choose City" %>
-    <%= f.input :new_location, label: "Or Enter Full Address", placeholder: "123 Cleveland Street, Dublin, Ireland" %
+    <%= f.input :new_location, label: "Or Enter Full Address", placeholder: "123 Cleveland Street, Dublin, Ireland" %>
     <%= f.input :venue_capacity %>
     <%= f.input :date %>
     <%= f.input :doors %>
@@ -18,7 +18,6 @@
     <%= f.input :image, label: "Upload Artist Images" do %>
         <%= f.filepicker_field :image, button_class: "btn btn-primary btn-medium" %>
     <% end %>
-    >
 
     <div class="form-actions">
         <%= f.submit nil, class: "btn btn-primary" %>
