--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -6,6 +6,20 @@
 
 
 /* Home */
+.jumbotron {
+  margin: 60px 0;
+  text-align: center;
+}
+
+.jumbotron h1 {
+  font-size: 72px;
+  line-height: 1;
+}
+
+.headlines  {
+  text-align: center;
+}
+
 #active-promoters {
   margin: 60px 0;
 }
