--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -17,7 +17,11 @@
 }
 
 .headlines  {
-  text-align: center;
+  font-size: 16px;
+  line-height: 26px;
+  h2 {
+    text-align: center
+  }
 }
 
 #active-promoters {
@@ -33,6 +37,8 @@
     font-size: 18px;
     text-align: center;
   }
+  // background: url(back_pattern.png) repeat center center;
+  opacity: .4;
 }
 
 .carousel-caption {
