--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,19 +24,19 @@
 	          <!-- <img class="img-circle" src="http://placehold.it/140x140"> -->
 	          <h2>Funding</h2>
 	          <p>100 Motels lets you fund potential shows without taking on any financial liability until you're sure it's viable. Also all monies go straight to the Organizers bank account - we don't hold your cash.</p>
-	          <p><a class="btn" href="#">View details »</a></p>
+	          <p align="center"><a class="btn" href="#">View details »</a></p>
 	        </div>
 					<div class="span4">
 	          <!-- <img class="img-circle" src="http://placehold.it/140x140"> -->
 	          <h2>Organizing</h2>
-	          <p>Everything you would expect of a modern ticketing platform. Hassle free purchases, barcoded tickets and a mobile app 'Doorman' for keeping track of things on the night.</p>
-	          <p><a class="btn" href="#">View details »</a></p>
+	          <p>Everything you would expect of a modern ticketing platform. Hassle free purchases, barcoded tickets and a mobile app 'Doorman' for keeping track of things on the night.</p> <br>
+	          <p align="center"><a class="btn" href="#">View details »</a></p>
 	        </div>
 					<div class="span4">
 	          <!-- <img class="img-circle" src="http://placehold.it/140x140"> -->
 	          <h2>A World Tour</h2>
-	          <p>If you have a single fan in a particular city then that's potentially a show. We will give anyone a chance to organize a tour for an Artist. Hustlers, conmen or pay for play will not be tolerated. </p>
-	          <p><a class="btn" href="#">View details »</a></p>
+	          <p>If you have a single fan in a particular city then that's potentially a show. We will give anyone a chance to organize a tour for an Artist. Hustlers, conmen or pay for play will not be tolerated. </p> <br>
+	          <p align="center"><a class="btn" href="#">View details »</a></p>
 	        </div>
 				</div> <!-- /headlines -->
 			</div>
